--- a/src/components/about/sobre.css
+++ b/src/components/about/sobre.css
@@ -1,4 +1,3 @@
-/* Conatiner pai sobre mim*/
 .sobre__container {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
@@ -50,6 +49,105 @@
     padding: 0 4rem 0 0;
     margin-bottom: var(--mb-2);
 }
+/* ====================== Aquiiiiiii =====================*/
+.icon-container {
+    position: relative;
+    width: 60px;
+    height: 60px;
+    background: var(--rectangle);
+}
+
+.buttonDowanload {
+    display: inline-flex;
+    align-items: center;
+    background: #242836;
+    color: var(--container-color);
+    /* padding: 1.25rem 2rem; */
+    border-radius: 0.5rem;
+    font-weight: var(--font-medium);
+    overflow: hidden;
+}
+
+/* Cor do texto btn Download */
+.button-text {
+    margin: 0;
+    padding: 16px 40px;
+    list-style: none;
+    text-align: center;
+    position: relative;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    font-size: 16px;
+    font-weight: 590;
+    line-height: 28px;
+    color: #fff;
+    transition: opacity 0.2s ease;
+}
+
+.button__icon {
+    display: block;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 50%;
+    top: 50%;
+    margin: -9px 0 0 -10px;
+    fill: none;
+    z-index: 1;
+    stroke-width: 1.4px;
+    stroke: var(--arrow);
+    stroke-linecap: round;
+    stroke-linejoin: round;
+}
+
+/*  */
+.loading-background {
+    position: absolute;
+    width: 100%;
+    height: 0;
+    bottom: 0;
+    left: 0;
+    overflow: hidden;
+}
+
+.loading-background .bx-download {
+    font-size: 1.3rem;
+    display: block;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 50%;
+    top: 50%;
+    margin: -9px 0 0 -10px;
+    fill: none;
+    z-index: 1;
+    stroke-width: 2px;
+    color: var(--arrow);
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    opacity: 0;
+    transform: translateY(-20px);
+    transition: opacity 0.3s ease, transform 4s ease;
+}
+
+.bx-check {
+    font-size: 1.3rem;
+    display: none;
+    position: absolute;
+    width: 20px;
+    height: 20px;
+    left: 50%;
+    top: 50%;
+    margin: -9px 0 0 -10px;
+    fill: none;
+    z-index: 1;
+    stroke-width: 2px;
+    color: #4bc793;
+    stroke-linecap: round;
+    stroke-linejoin: round;
+    animation: blink 1s infinite;
+}
+
 /*============================== Responsividade ==============================*/
 /*=============== BREAKPOINTS ===============*/
 /* For large devices */
