--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -69,7 +69,7 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    box-shadow: inset 0 0 0 9px rgb(51 51 51/ 80%);
+    box-shadow: var(--box-shadow-home-img);
     order: 1;
     justify-self: center;
     width: 300px;
@@ -153,7 +153,7 @@
     .home__img {
         width: 250px;
         height: 250px;
-        box-shadow: inset 0 0 0 9px rgb(51 51 51/ 80%);
+        box-shadow: var(--box-shadow-home-img);
     }
 
     .home__scroll {
