--- a/src/components/project/project.css
+++ b/src/components/project/project.css
@@ -78,13 +78,16 @@
 
 .technologies-list {
     margin: 1.2rem 0;
-    align-items: center;
+    align-items: start;
     width: 100%;
     display: grid;
     gap: 1rem;
     font-weight: var(--font-medium);
     grid-template-columns: repeat(auto-fill, minmax(4rem, 1fr));
     justify-content: center;
+    overflow: hidden;
+    height: 96px;
+    overflow-y: auto;
 }
 
 .technologies-item {
